# module-tar

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  README.md  RELEASE-NOTES
docs/: mainpage.dox.tmpl
qlib/TarDataProvider/: TarAddFilesDataProvider.qc  TarArchiveDataProvider.qc  TarArchiveDirectoryDataProvider.qc  TarArchiveInfoDataProvider.qc  TarCompressDataDataProvider.qc  TarCreateArchiveDataProvider.qc  TarDataDataProvider.qc  TarDataProvider.qc  TarDataProvider.qm  TarDataProviderFactory.qc  TarDecompressDataDataProvider.qc  TarDecryptArchiveDataProvider.qc  TarDeleteEntryDataProvider.qc  TarDirectoryDataProvider.qc  TarEncryptArchiveDataProvider.qc  TarEntryDataProvider.qc  TarExtractArchiveDataProvider.qc  TarExtractFileDataProvider.qc  TarFileDataProvider.qc  TarJoinArchiveDataProvider.qc  TarListArchiveDataProvider.qc  TarReadFileDataProvider.qc  TarSplitArchiveDataProvider.qc  TarStreamDataProvider.qc  TarStreamExtractDataProvider.qc
src/: QC_TarEntry.h  QC_TarEntry.qpp  QC_TarFile.h  QC_TarFile.qpp  QC_TarInputStream.h  QC_TarInputStream.qpp  QC_TarOutputStream.h  QC_TarOutputStream.qpp  QoreTarFile.cpp  QoreTarFile.h  TarInputStream.cpp  TarInputStream.h  TarOutputStream.cpp  TarOutputStream.h  tar-module.cpp  tar-module.h
test/: TarDataProvider.qtest  tar.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh
